playground/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil-playground
  namespace: wil
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wil-playground
  template:
    metadata:
      labels:
        app: wil-playground
    spec:
      containers:
        - name: playground
          image: wil42/playground:v2
          ports:
          - containerPort: 8888
