playground/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wil-playground-svc
  namespace: wil
spec:
  selector:
    app: wil-playground
  ports:
    - port: 8888
